Feat: MP4 파일 처리 추가

--- a/tiny/home.html
+++ b/tiny/home.html
@@ -1,7 +1,9 @@
 <html>
-<head><title>test</title></head>
-<body> 
-<img align="middle" src="godzilla.gif">
-Dave O'Hallaron
-</body>
+  <head>
+    <title>Tiny Web-server</title>
+  </head>
+  <body>
+    <!-- <img align="middle" src="godzilla.gif" /> -->
+    <video src="video.mp4" controls loop></video>
+  </body>
 </html>
